.kube/middle-ware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mycors
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "PATCH"
      - "OPTIONS"
    accessControlAllowOriginList:
      - "http://localhost:5173"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowCredentials: true
    addVaryHeader: true
