.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-storage
  template:
    metadata:
      labels:
        app: fastapi-storage
    spec:
      containers:
      - name: fastapi-storage
        image: docker.io/artempyzhov/fastapi_storage:1.0.8
        ports:
           - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  selector:
    app: fastapi-storage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
