.kube/kubernetes-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: fastapi-storage
